--- a/home.html
+++ b/home.html
@@ -4,21 +4,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="css/reset_less.css"/>
 <link rel="stylesheet" type="text/css" href="css/style.css"/>
-<title>测股页面</title>
+<title>资本力量主页</title>
 </head>
 <body>
-	<div class="a_div" style="">
-		<div class="sanjiao">
-		
-	    </div>
-	<div class="sanjia">
-		<div class="tt">
-			
-		</div>
-	</div>
-	
 
-</div>
 
 
 
@@ -54,6 +43,8 @@
             </div> 
     </div>
 </div>
+
+
 </body>
 
 
@@ -61,5 +52,6 @@
 <script type="text/javascript" src="js/jquery-1.8.3.min.js" ></script>
 
 <script type="text/javascript">
+
 </script>
 </html>
