--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 		<div class="line" >
 			<div class="alltext">
 				<span class="active">首页</span><span>银行</span><span>保险</span><span>证券</span><span>基金</span>
-			    <span>私募</span><span>期货</span><span>外汇</span><span>金融服务</span> <span>上市公司</span>   
+			    <span>私募</span><span>期货</span><span>外汇</span><span>金融服务</span> <span style="margin-right: 0;">上市公司</span>   
 			</div>
 		</div>
     </div>
@@ -43,6 +43,43 @@
     	</div>
     	<div class="cb"></div>
     </div>
+    <div class="geli"></div>
+    <div class="alltitl clearfix">
+    	<div class="line_l"></div>
+    	<div class="txt">品牌汇总</div>
+    	<div class="line_r"></div>
+    </div>
+    <div class="allpp"style="margin-top: 48px;">
+    	 <div class="line clearfix" >
+			<div class="alltext">
+				<span >热门</span><span>银行</span><span>保险</span><span>证券</span><span>基金</span>
+			    <span>私募</span><span>期货</span><span>外汇</span><span class="active">金融服务</span> <span style="margin-right: 0;" >上市公司</span>   
+			</div>
+	     </div>
+	     <ul>
+	     	<li><img src="img/zi_ben_23.jpg"><div>陆金所</div></li>
+	     	<li><img src="img/zi_ben_11.jpg"><div>陆金所</div></li>
+	     	<li><img src="img/zi_ben_13.jpg"><div>陆金所</div></li>
+	     	<li><img src="img/zi_ben_15.jpg"><div>陆金所</div></li>
+	     </ul>
+	     <ul>
+	     	<li><img src="img/zi_ben_23.jpg"><div>陆金所</div></li>
+	     	<li><img src="img/zi_ben_24.jpg"><div>陆金所</div></li>
+	     	<li><img src="img/zi_ben_13.jpg"><div>陆金所</div></li>
+	     	<li><img src="img/zi_ben_15.jpg"><div>陆金所</div></li>
+	     </ul>
+	     <ul>
+	     	<li><img src="img/zi_ben_23.jpg"><div>陆金所</div></li>
+	     	<li><img src="img/zi_ben_11.jpg"><div>陆金所</div></li>
+	     	<li><img src="img/zi_ben_25.jpg"><div>陆金所</div></li>
+	     	<li><img src="img/zi_ben_15.jpg"><div>陆金所</div></li>
+	     </ul>
+	     
+    </div>
+    <div class="blue_bg">
+    	<div class="canjia"></div>
+    </div>
+   
 
 
 
