--- a/home.html
+++ b/home.html
@@ -11,8 +11,16 @@
 		<div class="top_x"></div>
 		<div class="line" >
 			<div class="alltext">
-				<span class="active">首页</span><span>银行</span><span>保险</span><span>证券</span><span>基金</span>
-			    <span>私募</span><span>期货</span><span>外汇</span><span>金融服务</span> <span style="margin-right: 0;">上市公司</span>   
+	            <a href="#"><span class="active">首页</span></a>
+				<a href="#"><span>银行</span></a>
+				<a href="#"><span>保险</span></a>
+				<a href="#"><span>证券</span></a>
+				<a href="#"><span>基金</span></a>
+			    <a href="#"><span>私募</span></a>
+			    <a href="#"><span>期货</span></a>
+			    <a href="#"><span>外汇</span></a>
+			    <a href="#"><span>金融服务</span></a>
+			    <a href="#"><span style="margin-right: 0;">上市公司</span>   </a>
 			</div>
 		</div>
     </div>
@@ -77,9 +85,69 @@
 	     
     </div>
     <div class="blue_bg">
-    	<div class="canjia"></div>
+    	<div class="hig"></div>
+    	<a href="#"><div class="canjia"></div></a>
+    	<div class="center_fix">
+    		<div class="wujiao p1">上市公司</div>
+    		<div class="wujiao p2">基金</div>
+    		<div class="wujiao p3">期货</div>
+    		<div class="wujiao p4">证券</div>
+    		<div class="wujiao p5">外汇</div>
+    		<div class="wujiao p6">保险</div>
+    		<div class="wujiao p7">私募</div>
+    		<div class="wujiao p8">金融服务</div>
+    		<div class="wujiao p9">银行</div>
+    	</div>
     </div>
-   
+	<div class="bg_all">
+	    <div class="mid_bottom">
+	         <div class="alltitl clearfix">
+		    	 <div class="line_l"></div>
+		    	 <div class="txt">商务合作</div>
+		    	 <div class="line_r"></div>
+	         </div>
+	         <div class="cb"></div>
+	         <div class="guangao_l">
+	         	<p class="title">广告合作</p>
+	         	<p class="content">联系人：吴先生</p>
+	         	<p class="phone">TEL：136-1177-9828</p>
+	         	<p class="email">E-mail：qm.wu@stockstar.com</p>
+	         </div>
+	           
+	         <div class="guangao_r">
+	         	<p class="title">媒体合作</p>
+	         	<p class="content">联系人：葛小姐</p>
+	            <p class="phone">TEL：021-9999-6740</p>
+	            <p class="email">E-mail：zhiyan.ge@stockstar.com</p>
+	         </div>
+	         <div class="cb"></div>
+	    </div>
+	</div> 
+    <div class="alltitl meiti clearfix">
+    	 <div class="txt">媒体支持</div>
+    	<div><img src="img/ppai_03.jpg"> </div>
+     </div>
+  <div style="height: 47px;width: 100%;"></div>
+  <div class="foot_boottom">
+          <div class="bottom_right">
+		    <div id="foot">
+		       <div>
+		         <a href="http://www.stockstar.com/nav/map.html">网站导航</a> | 
+		          <a href="http://info.stockstar.com/aboutus">公司简介</a> | 
+		          <a href="http://info.stockstar.com/aboutus/Partners.htm">合作伙伴</a> | 
+		          <a href="http://www.stockstar.com/intro/disclaimer.asp">法律声明</a> | 
+		          <a href="http://info.stockstar.com/job/">诚聘英才</a> | 
+		          <a href="http://info.stockstar.com/aboutus/in.htm">征稿启事</a> | 
+		          <a href="http://info.stockstar.com/aboutus/lx.htm">联系我们</a> | 
+		          <a href="http://info.stockstar.com/aboutus/lx.htm#ad">广告服务</a> | 
+		          <a href="http://member.stockstar.com/message/message.html">用户反馈</a>
+		       </div>
+		
+			  <div>欢迎访问证券之星！请<a href="http://info.stockstar.com/aboutus/lx.htm" target="_blank">点此</a>
+			  	与我们联系 版权所有：Copyright &copy; 1996-<script type="text/javascript">document.write(new Date().getFullYear())</script>年 </div>
+		   </div>
+		 </div>
+  </div>
 
 
 
@@ -89,32 +157,6 @@
 
 
 
-
-
-
-
-
-
-<div id="footer" style="margin-top: 800px;"> 
-    <div class="page footer-page">
-            <!-- 页尾-上 -->
-            <div class="page-top">
-                <span>本站所载文章、数据仅供参考，使用前请核实，风险自负。</span>
-                <a class="cet" target="_blank" href="http://www.szzy888.com/help/fxjss">
-                    <img src="img/fengxian.png" alt="风险提示">
-                </a>
-                <span class="ml20">证劵投资咨询业务资格证书：ZX0069 </span>
-                <a target="_blank" href="http://www.csrc.gov.cn/pub/zjhpublic/G00306205/201205/t20120517_210251.htm">[证监会查询]</a>
-                <a target="_blank" href="http://person.sac.net.cn/pages/registration/sac-publicity-finish.html?aoiId=199030">[证券业协会查询]</a>
-            </div>
-            <!-- 页尾-下 -->
-            <div class="page-bottom">
-                <p>
-                    上海证券之星综合研究有限公司<em>联系电话：021-50803180</em><span>投诉电话：021-38429864</span><em>Copyright 2006-2016 </em><a href="http://www.szzy888.com/">WWW.SZZY888.COM</a><span class="ml20">沪ICP备07015607号</span>
-                </p>
-            </div> 
-    </div>
-</div>
 
 
 </body>
@@ -129,6 +171,11 @@ $(".imgs").click(function(){
 	var src=$(this).find('img').attr('src')
 	    $(this).addClass('active').siblings().removeClass('active')
 	$('.cont_img img').attr('src',src)
+})
+$('.wujiao').hover(function(){
+	$(this).addClass('wujiao_shiti')
+},function(){
+	$(this).removeClass('wujiao_shiti')
 })
 </script>
 </html>
